--- a/package.json
+++ b/package.json
@@ -21,55 +21,57 @@
   },
   "dependencies": {
     "@enonic/fnv-plus": "^1.3.0",
-    "@nestjs/common": "^5.4.0",
-    "@nestjs/core": "^5.7.4",
-    "@nestjs/passport": "^6.1.0",
-    "@nestjs/swagger": "^2.5.1",
-    "@nestjs/typeorm": "^5.2.2",
-    "amqplib": "^0.5.5",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/passport": "^7.1.0",
+    "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/swagger": "^4.6.1",
+    "@nestjs/typeorm": "^7.1.4",
+    "amqplib": "^0.6.0",
     "bip39": "^3.0.2",
-    "class-transformer": "^0.2.0",
-    "class-validator": "^0.9.1",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "cls-hooked": "^4.2.2",
     "coininfo": "^5.1.0",
     "coinkey": "^3.0.0",
-    "decimal.js": "^10.2.0",
-    "ethereumjs-tx": "^1.3.7",
-    "ethereumjs-wallet": "^0.6.3",
+    "decimal.js": "^10.2.1",
+    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-wallet": "^1.0.1",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "log4js": "^4.0.2",
-    "moment": "^2.24.0",
-    "mysql": "^2.16.0",
-    "neo4j-driver": "^1.7.6",
-    "passport": "^0.4.0",
+    "log4js": "^6.3.0",
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "neo4j-driver": "^4.1.2",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "redlock": "^4.1.0",
-    "reflect-metadata": "^0.1.12",
+    "redlock": "^4.2.0",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
-    "rxjs": "^6.5.3",
-    "typeorm": "^0.2.11",
-    "typescript": "^3.0.1",
-    "web3": "^1.0.0-beta.37",
-    "web3-core": "^1.0.0-beta.37",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-node-externals": "^1.7.2"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.2.28",
+    "typescript": "^4.0.3",
+    "web3": "^1.3.0",
+    "web3-core": "^1.3.0",
+    "webpack": "^5.1.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.1",
-    "@types/supertest": "^2.0.5",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.3",
-    "prettier": "^1.14.2",
-    "supertest": "^3.1.0",
-    "ts-jest": "^23.1.3",
-    "ts-loader": "^4.4.2",
-    "ts-node": "^7.0.1",
-    "tsconfig-paths": "^3.5.0",
-    "tslint": "5.11.0"
+    "@nestjs/testing": "^7.4.4",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.14",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.5.3",
+    "nodemon": "^2.0.5",
+    "prettier": "^2.1.2",
+    "supertest": "^5.0.0",
+    "swagger-ui-express": "^4.1.4",
+    "ts-jest": "^26.4.1",
+    "ts-loader": "^8.0.5",
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "5.20.1"
   },
   "jest": {
     "moduleFileExtensions": [
