add btc and eth account to support hdwallet

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/swagger": "^4.6.1",
     "@nestjs/typeorm": "^7.1.4",
     "amqplib": "^0.6.0",
+    "bip32": "^2.0.6",
     "bip39": "^3.0.2",
+    "bitcoinjs-lib": "^5.2.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cls-hooked": "^4.2.2",
@@ -37,6 +39,7 @@
     "decimal.js": "^10.2.1",
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-wallet": "^1.0.1",
+    "ethers": "^5.0.18",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
